:sparkles: [https://github.com/maykinmedia/sharing-configs/issues/21] add 'overwrite' attribute to API and github handler
