# src/sharing/contrib/github/handlers.py
@@ -4,7 +4,7 @@ from sharing.core.constants import ConfigTypes
 from sharing.core.exceptions import HandlerException, HandlerObjectNotFound
 from sharing.core.handlers import BaseHandler
 
-from .service import create_file, get_file, get_files_in_folder
+from .service import create_file, get_file, get_files_in_folder, update_file
 
 
 def github_error_handler(func):
@@ -33,7 +33,24 @@ class GitHubHandler(BaseHandler, type=ConfigTypes.github):
         return github_file.decoded_content
 
     @github_error_handler
-    def upload(self, folder: str, filename: str, content: bytes, comment: str):
+    def upload(
+        self,
+        folder: str,
+        filename: str,
+        content: bytes,
+        comment: str,
+        overwrite: bool = False,
+    ):
+        folder_files = self.list_files(folder)
+        if filename in folder_files:
+            if not overwrite:
+                raise HandlerException(
+                    f"File {filename} already exists in the folder. "
+                    "Use 'overwrite' attribute if you want to replace it"
+                )
+
+            return update_file(self.config, folder, filename, content, comment)
+
         return create_file(self.config, folder, filename, content, comment)
 
     @github_error_handler
